Continue the transformation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="distribution" content="GLOBAL">
 <meta name="description" content="{{ page.description | default: "Gilbert and Sullivan Archive" }}">
-<meta name="keywords" content="{{ page.description | default: "sullivan, gilbert, d'oyly carte, savoy" }}">
+<meta name="keywords" content="{{ page.keywords | default: "sullivan, gilbert, d'oyly carte, savoy" }}">
 <meta name="robots" content="INDEX">
 <meta name="rating" content="GENERAL">
-<link href="{{ page.description | default: "/styles/gsarchive.css" }}" rel="stylesheet">
+<link href="{{ page.stylesheet | default: "/styles/gsarchive.css" }}" rel="stylesheet">
 <script type="text/javascript" src="../../layout/lightbox2/js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../../layout/lightbox2/js/lightbox-2.6.min.js"></script>
 
