Complete the transformation, at least for proof of concept

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 <header>
     <a href="../../index.html"><img src="https://gsarchive.net/layout/images/logo3sm.jpg" alt="The Gilbert and Sullivan Archive" width="200" height="133" border="0"></a>
     <!-- TODO: Configure this from the page -->
-    <img src="../graphics/title.gif" alt="Princess Ida" width="513" height="135">
+    <div><img src="../graphics/title.gif" alt="Princess Ida" width="513" height="135"></div>
 </header>
 {{ content }}
 
