--- a/princess_ida/ida.css
+++ b/princess_ida/ida.css
@@ -1,25 +1,38 @@
 /* Ultimately, put these styles into gsarchive.css and don't have directory-specific styles */
 * {box-sizing: border-box;}
 main {
-	max-width: 700px;
+	width: 700px;
 	border: 10px solid #cece9c;
 	border-radius: 10px;
 	margin: auto;
+	background: #feffe6;
+	padding: 10px;
 }
 
 header {
 	width: 750px;
-	border: 12px ridge #CECE9C;
+	border: 6px outset #CECE9C;
 	display: flex;
+	position: relative;
+	left: -50px;
+	background: #feffe6;
 }
 header > * {
 	display: block;
+	border: 6px inset #CECE9C;
 }
 section {
 	display: flex;
 }
 
-/* The below styles are retained from princess_ida/ida.css */
+.imagebox {
+	display: flex;
+	width: 100%;
+	justify-content: space-around;
+	margin: 1em;
+}
+
+/* The below styles are largely retained from princess_ida/ida.css */
 body {
 	width: 100vw;
 	background-image: url(graphics/back.jpg);
@@ -47,20 +60,6 @@ h2 {
 	margin-right: 20px;
 	margin-left: 20px;
 }
-.smallcaps {
-	font-family: Arial, Helvetica, sans-serif;
-	font-variant: small-caps;
-}
-
-
-
-.author {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	color: #FFFFCC;
-}
-
 
 .menuitem {
 	font-family: Arial, Helvetica, sans-serif;
@@ -95,69 +94,14 @@ a:hover {
 a:active {
 	text-decoration: none;
 }
-.part {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	font-weight: bold;
-	font-variant: small-caps;
-	color: #660033;
-}
-.rubric {
-	color: #660033;
-	font-weight: bolder;
-	font-family: Arial, Helvetica, sans-serif;
-}
+
 .linkstab {
 	border: 6px double #CECE9C;
 }
 
-.smallprint {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
-	margin-right: 20px;
-	margin-left: 20px;
-}
-.continuation {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	margin-right: 20px;
-	margin-left: 20px;
-}
 .subhead {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	font-weight: bold;
 	color: #660033;
-}
-.tdgold {
-	background-color: #CECE9C;
-}
-.tdcream {
-	background-color: #FFFFE7;
-}
-.masthead {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 24px;
-	font-weight: bold;
-	font-variant: small-caps;
-	color: #FFFFCC;
-	text-align: center;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: auto;
-	margin-left: 0px;
-}
-.midilist {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	color: #000000;
-	margin-top: 0px;
-	margin-right: 20px;
-	margin-bottom: 0px;
-	margin-left: 20px;
-}
-.linksframe {
-	border: 7px groove #CC9933;
 }
