--- a/princess_ida/ida.css
+++ b/princess_ida/ida.css
@@ -1,4 +1,5 @@
 /* Ultimately, put these styles into gsarchive.css and don't have directory-specific styles */
+/* MD TARGET: poc_ida.css --> */
 * {box-sizing: border-box;}
 main {
 	width: 700px;
