--- a/princess_ida/ida.css
+++ b/princess_ida/ida.css
@@ -39,23 +39,28 @@ body {
 	background-image: url(graphics/back.jpg);
 	background-color: #DFC8BA;
 	background-attachment: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: medium;
 }
 p {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	text-indent: 40px;
 	margin-left: 20px;
 	margin-right: 20px;
 }
 h2 {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 24px;
 	font-weight: bold;
 	color: #7E2929;
 	text-align: center;
 }
+h3 {
+	font-size: 18px;
+	font-weight: bold;
+	color: #7E2929;
+	text-align: center;
+}
 .date {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #666666;
 	margin-right: 20px;
@@ -63,22 +68,14 @@ h2 {
 }
 
 .menuitem {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #000000;
 }
 .here {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	color: #666666;
 }
 
-
-body,td,th {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: medium;
-	color: #000000;
-}
 
 a:link {
 	color: #3300CC;
@@ -101,7 +98,6 @@ a:active {
 }
 
 .subhead {
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 20px;
 	font-weight: bold;
 	color: #660033;
