Add a tribute page for the immediately past Archive Curator

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,23 +20,20 @@
 
 <link rel="stylesheet" href="../../layout/lightbox2/css/lightbox.css"></HEAD>
 <body>
+<table width="250" border="0" align="center" cellpadding="4" cellspacing="0" style="border: 8px ridge #cccc99; margin-bottom: 1em;">
+  <tr>
+    <td bgcolor="#feffe6" class="pageheader">Gilbert and Sullivan Archive </td>
+  </tr>
+</table>
+
 <main>
-<!-- TODO: Autogenerate this from the path -->
-<nav><span class="menuitem">You are here:</span>
-<span class="menuitem"><a href="../../index.html"> Archive Home</a></span>
-<span class="youare">&gt;</span><span class="here"> Princess Ida</span>
-</nav>
-<header>
-    <a href="../../index.html"><img src="https://gsarchive.net/layout/images/logo3sm.jpg" alt="The Gilbert and Sullivan Archive" width="200" height="133" border="0"></a>
-    <!-- TODO: Configure this from the page -->
-    <div><img src="../graphics/title.gif" alt="Princess Ida" width="513" height="135"></div>
-</header>
 {{ content }}
 
 <footer>
 <hr align="center" width="95%" noshade>
 <div align="center"><span class="menuitem"><a href="../../index.html">Archive Home</a></span></div>
-<p class="date">Copyright &copy; 2019 The Gilbert and Sullivan Archive All Rights Reserved.</p>
+<p class="copyright"><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
+ This work is licensed under a <BR> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
 </footer>
 </main>
 </body>
