--- a/princess_ida/ida.css
+++ b/princess_ida/ida.css
@@ -60,11 +60,11 @@ h3 {
 	color: #7E2929;
 	text-align: center;
 }
-.date {
+.copyright {
 	font-size: 14px;
 	color: #666666;
-	margin-right: 20px;
-	margin-left: 20px;
+	margin: auto;
+	text-align: center;
 }
 
 .menuitem {
@@ -115,4 +115,12 @@ a:active {
 }
 .toc li {
 	margin: 0 3px;
+}
+
+.pageheader {
+	font-size: 16px;
+	color: #000099;
+	font-weight: bold;
+	font-family: "Times New Roman", Times, serif;
+	text-align: center
 }
