Move the name gsarchive.css to be a (stub) file for ALL the site

--- a/princess_ida/ida.css
+++ b/princess_ida/ida.css
@@ -1,3 +1,4 @@
+@import "gsarchive.css";
 /* Ultimately, put these styles into gsarchive.css and don't have directory-specific styles */
 /* MD TARGET: poc_ida.css --> */
 * {box-sizing: border-box;}
