--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <meta name="keywords" content="{{ page.keywords | default: "sullivan, gilbert, d'oyly carte, savoy" }}">
 <meta name="robots" content="INDEX">
 <meta name="rating" content="GENERAL">
-<link href="{{ page.stylesheet | default: "/styles/gsarchive.css" }}" rel="stylesheet">
+<link href="{{ page.stylesheet | default: "/styles/markdown.css" }}" rel="stylesheet">
 <script type="text/javascript" src="../../layout/lightbox2/js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="../../layout/lightbox2/js/lightbox-2.6.min.js"></script>
 
