Apply changes as done on the live site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,7 @@
 <meta name="rating" content="GENERAL">
 <link href="{{ page.stylesheet | default: "/styles/markdown.css" }}" rel="stylesheet">
 <script src="/gsarchive.js" type=module></script>
-<script type="text/javascript" src="../../layout/lightbox2/js/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="../../layout/lightbox2/js/lightbox-2.6.min.js"></script>
-
-<link rel="stylesheet" href="../../layout/lightbox2/css/lightbox.css"></HEAD>
+</head>
 <body>
 <table width="250" border="0" align="center" cellpadding="4" cellspacing="0" style="border: 8px ridge #cccc99; margin-bottom: 1em;">
   <tr>
