--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -28,17 +28,11 @@ a:active {
 	text-align: center
 }
 
-.youare {color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 13px;
-}
-
-
+.youare {color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 13px;}
 
 .menuitem {font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #000000;}
 
-
-
 .here {font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #999999;}
-
 
 .date {
 	font-size: 14px;
@@ -66,20 +60,6 @@ a:active {
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
-}
-
-main {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 16px;
-	font-style: normal;
-	font-weight: normal;
-	color: #000000;
-	background-image: url(../layout/images/page_frame/cream_back.gif);
-	width: 90%;
-	border: 10px solid #cece9c;
-	border-radius: 10px;
-	margin: auto;
-	padding: 10px;
 }
 
 .lyric {
