--- a/styles/gsarchive.css
+++ b/styles/gsarchive.css
@@ -58,7 +58,7 @@ main {
 	width: 90%;
 	border: 10px solid #cece9c;
 	border-radius: 10px;
-	margin: auto;
+	margin: 0 auto 10px;
 	padding: 10px;
 }
 
