Identify banners with a class instead of assuming all tables are banners

--- a/styles/gsarchive.css
+++ b/styles/gsarchive.css
@@ -77,7 +77,7 @@ it might be worth changing them. But for now, it's easier to not. */
 main.narrow {
 	width: 700px;
 }
-main.narrow > table {
+main.narrow table.banner {
 	position: relative;
 	left: -45px;
 }
