Transform masthead from table into div with border

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,7 @@
 <script src="/gsarchive.js" type=module></script>
 </head>
 <body>
-<table width="250" border="0" align="center" cellpadding="4" cellspacing="0" style="border: 8px ridge #cccc99; margin-bottom: 1em;">
-  <tr>
-    <td bgcolor="#feffe6" class="pageheader">Gilbert and Sullivan Archive </td>
-  </tr>
-</table>
-
+<div class="masthead">Gilbert and Sullivan Archive</div><br>
 <main>
 {{ content }}
 
