--- a/styles/gsarchive.css
+++ b/styles/gsarchive.css
@@ -95,3 +95,18 @@ main.narrow.padded .topmatter {
 main.narrow.padded table.banner {
 	left: -65px;
 }
+
+.masthead {
+	margin: auto;
+	font-family: "Times New Roman", Times, serif;
+	font-weight: bold;
+	color: #000099;
+	width: 250px;
+	border: 8px ridge #cccc99;
+	background: #feffe6;
+	text-align: center;
+	padding: 4px;
+}
+.masthead.image {
+	width: min-content;
+}
