Improve display of MIDI file links

--- a/styles/web_opera.css
+++ b/styles/web_opera.css
@@ -129,3 +129,8 @@ a:active {
 	background-position: center;
 	background-repeat: no-repeat;
 }
+
+.musiclinks {
+	display: flex;
+	justify-content: space-around;
+}
