Style the WO nav better

--- a/_includes/wo_nav.html
+++ b/_includes/wo_nav.html
@@ -5,6 +5,7 @@ Generate Web Opera navigation from the directory listing (as gathered by the Pyt
 <a href="{{site.data.wo_nav.lastpage[page.path]}}"><img src="/layout/wo_nav/purp_wostrip/lastpage.jpg" alt="Previous Page"></a>
 <a href="{{site.data.wo_nav.lastsong[page.path]}}"><img src="/layout/wo_nav/purp_wostrip/lastsong.jpg" alt="Previous Song"></a>
 <a href="."><img src="/layout/wo_nav/purp_wostrip/webohome.jpg" alt="Web Opera home page"></a>
+<a href="#"><img src="/layout/wo_nav/purp_wostrip/pagetop.jpg" alt="Top"></a>
 <a href="{{site.data.wo_nav.nextsong[page.path]}}"><img src="/layout/wo_nav/purp_wostrip/nextsong.jpg" alt="Next Song"></a>
 <a href="{{site.data.wo_nav.nextpage[page.path]}}"><img src="/layout/wo_nav/purp_wostrip/nextpage.jpg" alt="Next Page"></a>
 </nav>
