--- a/styles/web_opera.css
+++ b/styles/web_opera.css
@@ -160,3 +160,10 @@ h4 ~ table {
 h4 ~ table td {
 	padding: 0 0.25em;
 }
+
+.poem {
+	white-space: pre-wrap;
+	margin: auto;
+	width: fit-content;
+	text-indent: 0;
+}
