--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -5,6 +5,19 @@ body {
 	background-image: url(howarth_images/bkg01.jpg);
 	margin: 0 0 0 0
 }
+header {
+	width: 950px;
+	border: 6px outset #CECE9C;
+	display: flex;
+	position: relative;
+	left: -50px;
+	background: #feffe6;
+}
+header > * {
+	display: block;
+	border: 6px inset #CECE9C;
+}
+
 a:link {
 	color: #3300CC;
 	text-decoration: none;
@@ -20,12 +33,25 @@ a:hover {
 a:active {
 	text-decoration: none;
 }
+
 .pageheader {
 	font-size: 16px;
 	color: #000099;
 	font-weight: bold;
 	font-family: "Times New Roman", Times, serif;
 	text-align: center
+}
+
+.titlecard {
+	flex-grow: 1;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.contrib {
+	text-align: center;
+	font-size: smaller;
+	margin: auto;
 }
 
 .youare {color: #000000; font-family: Arial, Helvetica, sans-serif; font-size: 13px;}
